# libisaac

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: mod_object.md
src/libisaac/: __init__.py  libisaac.py
